--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,6 @@
 </head>
 <body>
 
-<fg-icon class="test" icon="backpack"></fg-icon>
+<fg-icon class="test" icon="goals"></fg-icon>
 </body>
 </html>
