added custom icon

--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,10 @@
     <title>Hello wolrd</title>
     <style>
         .test {
-            width: 70px;
-            height: 70px;
-        }
+          width: 70px;
+          height: 70px;
 
-        .test {
+          /* debug */
           display: flex;
           flex-wrap: wrap;
           position: fixed;
@@ -18,10 +17,12 @@
           left: 0;
           top: 0;
           overflow: auto;
+          /*  */
         }
     </style> 
 </head>
 <body>
-<fg-icon class="test" icon="goals" debug="true"></fg-icon>
+<fg-icon class="test" debug icon="home"></fg-icon>
+<!-- <fg-icon class="test" icon="../custom.svg" [debug]></fg-icon> -->
 </body>
 </html>
