--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     </style> 
 </head>
 <body>
-<fg-icon class="test" debug icon="home"></fg-icon>
+<fg-icon class="test" debug icon="add"></fg-icon>
 <!-- <fg-icon class="test" icon="../custom.svg" [debug]></fg-icon> -->
 </body>
 </html>
